--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=de1680a27125b791924427c63f93e448
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/handicar"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/handicar"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
